// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DetailsSection should render correctly when selectedUser is null 1`] = `
<div
  className="col-span-1 lg:col-span-2"
>
  <div
    className="rounded overflow-hidden shadow-lg bg-slate-100"
  >
    <div
      className="px-6 py-4"
    >
      <div
        className="font-bold text-xl mb-2"
      >
        Details
      </div>
      <div
        className="text-xl mb-2"
      >
        Please select user...
      </div>
    </div>
  </div>
</div>
`;

exports[`DetailsSection should render correctly with selectedUser 1`] = `
<div
  className="col-span-1 lg:col-span-2"
>
  <div
    className="rounded overflow-hidden shadow-lg bg-slate-100"
  >
    <div
      className="px-6 py-4"
    >
      <div
        className="font-bold text-xl mb-2"
      >
        Details
      </div>
      <ul
        className="list-disc px-6"
      >
        <li
          className="text-gray-700 text-xl"
        >
          Sample real name
        </li>
        <li
          className="text-gray-700 text-xl"
        >
          Sample player name
        </li>
        <li
          className="text-gray-700 text-xl"
        >
          Sample asset
        </li>
      </ul>
    </div>
  </div>
</div>
`;
